<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Trickle</string>
    <string name="trickle">Trickle</string>
    <string name="design">design</string>
    <string name="next">Next</string>
    <string name="finish">Fınısh</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password_again">Password Again</string>
    <string name="already_registered">Already Registered? Sign In</string>
    <string name="passwords_not_match">Passwords do not match!</string>
    <string name="empty_fields">Fill in the empty fields!</string>
    <string name="sign_up_success">Registration Successful.</string>
    <string name="enter_email">Enter your email!</string>
    <string name="send_reset_link">Password reset link has been sent to your email address.</string>
    <string name="new_account">New Account</string>
    <string name="account_name">Account Name</string>
    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="holder"> </string>
    <string name="account">Account</string>
    <string name="shopping_list">Needs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:keep="@string/hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate">Calculate</string>
    <string name="overview" tools:keep="@string/overview">Overview</string>
    <string name="needs">Needs</string>
    <string name="currency" tools:keep="@string/currency">Currency</string>
    <string name="last_transactions">Last Transactıons</string>
    <string name="filter" tools:keep="@string/filter">Fılter</string>
    <string name="name">Name</string>
    <string name="count">Count</string>
    <string name="add_need">Add Need</string>
    <string name="pick_date">PICK DATE</string>
    <string name="price">Price</string>
    <string name="title">Title</string>
    <string name="save_transaction">SAVE TRANSACTION</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="toplam">Total:</string>
    <string name="serbest_piyasa_al">Free Market Buying</string>
    <string name="serbest_piyasa_sat">Free Market Selling</string>
    <string name="banka_sat">Bank Selling</string>
    <string name="banka_al">Bank Buying</string>
    <string name="doviz_seciniz" tools:keep="@string/doviz_seciniz">Select Currency Type</string>
    <string name="none">-</string>
    <string name="user_logout">User Logout</string>
    <string name="account_logout">Account Logout</string>
    <string name="a_problem_was_encountered">A problem was encountered!</string>
    <string name="passwords_too_short">Password must be min 6</string>
    <string name="needs_empty">Needs Empty!</string>
    <string name="transactions_empty">Transactions Empty!</string>
</resources>